--- a/HTML/index.html
+++ b/HTML/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-     <h1>Heisann dette er en motherfuckings test</h1>
-     <button id="knapp" onclick="test()">test</button>
+  <h1>Har ting endra seg?</h1>
+  <button id="knapp" onclick="test()">test</button>
 </body>
 </html>
