--- a/HTML/index.html
+++ b/HTML/index.html
@@ -11,7 +11,9 @@
 </head>
 
 <body>
-  <h1>Har ting endra seg?</h1>
-  <button id="knapp" onclick="test()">test</button>
+  <main>
+    <article>
+      <img src="https://unsplash.it/300/300">
+  </main>
 </body>
 </html>
