--- a/HTML/index.html
+++ b/HTML/index.html
@@ -14,6 +14,15 @@
   <main>
     <article>
       <img src="https://unsplash.it/300/300">
+      <p>Random bilde</p>
+    </article>
+    <article>
+      <img src="https://unsplash.it/300/300">
+      <p>Random bilde</p>
+    </article><article>
+      <img src="https://unsplash.it/300/300">
+      <p>Random bilde</p>
+    </article>
   </main>
 </body>
 </html>
