--- a/HTML/index.html
+++ b/HTML/index.html
@@ -19,7 +19,8 @@
     <article>
       <img src="https://unsplash.it/300/300">
       <p>Random bilde</p>
-    </article><article>
+    </article>
+    <article>
       <img src="https://unsplash.it/300/300">
       <p>Random bilde</p>
     </article>
